# trivialInit

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/trivialInit/: init_system.hpp
include/trivialInit/mixins/: filesystem.hpp  journal.hpp  mixin_base.hpp  process.hpp  signal_handler.hpp  socket.hpp  tui.hpp  unit_exec.hpp  unit_parse.hpp  unit_scan.hpp
include/trivialInit/systemd/: socket_unit.hpp  specifiers.hpp  unit_file.hpp
scripts/: qemu_test.sh  setup_arch_qemu.sh
src/: main.cpp  trivialctl.cpp
src/systemd/: specifiers.cpp  unit_executor.cpp
test/: test_mixin_composition.cpp  test_specifiers.cpp  test_unit_parser.cpp
